smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/text-block-empty.smithy
// Parse error at line 4, column 22 near `)\n`: Invalid text block: text block is empty
namespace smithy.example

@documentation("""""")
string MyString
